Collections.emptyXXX + Collections.singletonXXX => List/Set/Map.of