@@ -5,7 +5,6 @@ import com.yahoo.documentmodel.NewDocumentType;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
@@ -40,7 +39,7 @@ public class ReservedDocumentTypeNameValidatorTest {
     @Test
     void exception_is_not_thrown_on_unreserved_name() {
         ReservedDocumentTypeNameValidator validator = new ReservedDocumentTypeNameValidator();
-        validator.validate(asDocTypeMapping(Collections.singletonList("foo")));
+        validator.validate(asDocTypeMapping(List.of("foo")));
     }
 
     @Test
